[project]
name = "rag-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymongo==4.15.3",
    "streamlit==1.51.0",
    "langchain==1.0.3",
    "langchain-core==1.0.2",
    "langchain-google-genai==3.0.1",
    "langchain-mongodb==0.7.1",
]
